tests/error/comptime_arg_errors/const_mismatch3.err
Error: Value mismatch (at $FILE:12:11)
   | 
10 | @guppy
11 | def bar(n: nat @ comptime, m: nat @ comptime) -> None:
12 |     foo[n](m)
   |            ^ Expected constant `42`, got `43`

Guppy compilation failed due to 1 previous error
